--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Jeremy D. Cherry
-description: Designer, writer, and educator.
+description: Designer, writer, and educator
 google_analytics:
