Updated config with OG description

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Jeremy D. Cherry
-description: Brand & Digital Designer
+description: Brand Designer in Charlottesville, VA
 google_analytics:
